<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_sign_up"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.assia.lostandfound.SignUpActivity">

<ImageView
    android:id="@+id/logo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:src="@drawable/logo"
    />


<ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:id="@+id/signUp_login_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/signInMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp"
        android:text="@string/signInMessage"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/button_SignInGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signInMessage"
        android:layout_marginTop="20dp"
        android:text="@string/button_SignInGoogle"/>



    <EditText
        android:id="@+id/emailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_SignInGoogle"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEdit"
        android:hint="@string/name"/>


    <EditText
        android:id="@+id/passEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameEdit"
        android:hint="@string/pass"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/phoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passEdit"
        android:hint="@string/phone"
        android:inputType="phone"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneEdit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Sign up"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>
